--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.AddTransactionActivity" />
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.ReportsActivity" />
+        <activity android:name=".ui.CategoryManagementActivity" />
     </application>
 
 </manifest>
