--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,21 +14,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyBudget">
+        android:theme="@style/Theme.MyBudget"
+        tools:targetApi="31">
         <activity
             android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.AddTransactionActivity" />
         <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.AddTransactionActivity" />
         <activity android:name=".ui.ReportsActivity" />
         <activity android:name=".ui.CategoryManagementActivity" />
+        <activity android:name=".ui.BudgetActivity" />
+        <activity android:name=".ui.SearchActivity" />
+        <activity android:name=".ui.SavingsGoalsActivity" />
     </application>
 
 </manifest>
